--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/postcss": "^4.1.7",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.511.0",
     "postcss": "^8.5.3",
